BUGFIX: Fixed add button overlapping image/flash popups in modeladmin. #4906
git-svn-id: svn://svn.silverstripe.com/silverstripe/open/modules/cms/branches/2.4@96884 467b73ca-7a2a-4603-9d3b-597d59a354a9

--- a/css/ModelAdmin.css
+++ b/css/ModelAdmin.css
@@ -131,10 +131,9 @@ body.ModelAdmin #statusMessage {
 }
 
 body.ModelAdmin #right .ajaxActions {
-	position: fixed !important;
 	position: absolute;
-	right: 30px !important;
-	bottom: 35px !important;
+	right: 2px;
+	bottom: -25px;
 }
 
 #LeftPane .tab {
